--- a/index.css
+++ b/index.css
@@ -1,6 +1,41 @@
 /* Board styling */
+body{
+  background-color: black;
+
+}
+.starter{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh; 
+}
+.start{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  
+}
+.btn-light:hover{
+background-color:grey;
+font-weight: bolder;
+color:white;
+}
+.btn-light{
+  padding:5px 40px;
+  font-size:30px;
+  background-color: aliceblue;
+  transition: background-color 0.5s ease;
+  
+}
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; 
+}
 #board {
-    display: flex;
+    display: none ;
     flex-wrap: wrap;
     width: 400px;
     height: 300px;
@@ -15,7 +50,7 @@
     font-size: 50px;
     text-align: center;
     line-height: 100px;
-    border: 1px solid black;
+    border: 2px solid ghostwhite;
     cursor: pointer;
   }
   
