--- a/index.css
+++ b/index.css
@@ -68,3 +68,27 @@ color:yellow;
     text-align: center;
     margin-top: 20px;
   }
+  .winning-cell{
+    position: relative;
+  }
+  
+  .winning-cell::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 3px;
+    background-color: red;
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
+  .line {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 3px;
+    background-color: red;
+    transform: translate(-50%, -50%) rotate(45deg);
+    z-index: -1; /* make sure the line is behind the cells */
+  }
