--- a/index.css
+++ b/index.css
@@ -8,19 +8,17 @@ body{
   flex-direction: column;
   align-items: center;
   height: 100vh; 
+  
 }
 .start{
   display: flex;
+  flex-direction:column;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  
+  width:100%;
 }
-.btn-light:hover{
-background-color:#37505c;
-font-weight: bolder;
-color:yellow;
-}
+
 .btn-light{
   padding:5px 40px;
   font-size:30px;
@@ -29,6 +27,25 @@ color:yellow;
   transition: background-color 0.5s ease;
   
 }
+.btnXO
+{
+font-size: 8rem;
+background-color: #ccc;
+border: 2px solid #ccc;
+color :#37505c; 
+border-radius: 5px;
+padding: 5px 60px;
+margin: 40px;
+}
+.btnXO:hover{
+  box-shadow: 0px 0px 5px 2px #ccc;
+}
+.selected{
+  background-color:#37505c;
+  color: #ccc;
+}
+
+
 .center {
   display: none;
   flex-direction: column;
@@ -44,9 +61,8 @@ color:yellow;
     height: 300px;
     margin: 50px auto;
   }
-  .restart{
+.restart{
     margin:20px;
-
   }
   /* Cell styling */
   .cell {
@@ -71,6 +87,7 @@ color:yellow;
   }
   .winning-cell{
     position: relative;
+    background-color:#66767d;
   }
   
   .winning-cell::before {
